set csrf_token in all post templates

--- a/wayf/templates/wayf_from_sp.html
+++ b/wayf/templates/wayf_from_sp.html
@@ -7,6 +7,7 @@
 
 <div id="idpform">
 <form id="idp_selection" method="post">
+    {% csrf_token %}
 	<select name="user_idp">
 	{% include "idp_dropdown.html" %}
 	</select>
